# log-analyzer

./: .gitignore  AGENT.md  pyproject.toml  readme.md  readme_jp.md  requirements.txt  requirments.txt
analysis_out/: analysis_summary.json  file_dependencies.html  index.html  ノード一覧.csv  依存ランキング.csv  依存一覧.csv  循環参照.csv
docs/: Design.md  Design_EN.md  How_To_Use_EN.md  How_To_use.md
docs_jp/: Design_and_Specifications.agent.md  Design_and_Specifications.agent_JP.md  How_To_Use_JP.md  How_to_use.md
extra_sample_file/: samle_logfile_maker.py
file_adapter/: __init__.py  adapter_types.py  apache_adapter.py  csv_adapter.py  defender_adapter.py  defender_rules.py  extra_file_storage.py  file_adapter_controller.py  json_adapter.py  nginx_adapter.py  py_traceback_adapter.py  sqlite_adapter.py
fv_engine/: AGENT.md  __init__.py  fv_bridge.py  fv_interpreter.py  fv_parser.py  fv_plan.py  fv_reserved_words.py  fv_result.py  fv_runner.py  fv_types.py
lang/: __init__.py  en.py  ja.py
logs/: .tzdata_ver_reference  AGENT.md  alarm_2026-04-12.jsonl  alarm_2026-04-13.jsonl  alarm_2026-04-22.jsonl  alarm_2026-04-23.jsonl  alarm_2026-04-24.jsonl  alarm_2026-04-25.jsonl  context_builder.py  context_types.py  display_formatter.py  error_response_dict.py  language_selector.py  log_analysis.py  log_app.py  log_config.json  log_config.py  log_multi_select.py  log_normalizer.py  log_paths.py  log_searcher.py  log_storage.py  log_types.py  log_validator.py  log_viewer.py  logs.code-workspace  multi_info_logger.py  openai_key_store.py  query_error_bridge.py  result_exporter.py  (+13 more)
(+76 files in other folders)
