[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "log-analyzer"
version = "0.9.9"
description = "Structured logging + event analysis + GUI viewer"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "F.Kurokawa" }
]

dependencies = []

[tool.setuptools.packages.find]
where = ["."]

[tool.pyright]
typeCheckingMode = "strict"

include = [
    "logs",
    "query_engine",
    "summary_engine",
    "tests",
]
exclude = [
    "logs/__pycache__",
    "query_engine/__pycache__",
    "summary_engine/__pycache__",
    "tests/__pycache__",
]
